Fix telemetry streaming and ag-ui tests

--- a/python/packages/ag-ui/pyproject.toml
+++ b/python/packages/ag-ui/pyproject.toml
@@ -43,7 +43,7 @@ packages = ["agent_framework_ag_ui", "agent_framework_ag_ui_examples"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-testpaths = ["tests"]
+testpaths = ["ag_ui_tests"]
 pythonpath = ["."]
 
 [tool.ruff]
@@ -61,7 +61,7 @@ warn_unused_configs = true
 disallow_untyped_defs = false
 
 [tool.pyright]
-exclude = ["tests", "examples"]
+exclude = ["tests", "ag_ui_tests", "examples"]
 typeCheckingMode = "basic"
 
 [tool.poe]
@@ -70,4 +70,4 @@ include = "../../shared_tasks.toml"
 
 [tool.poe.tasks]
 mypy = "mypy --config-file $POE_ROOT/pyproject.toml agent_framework_ag_ui"
-test = "pytest --cov=agent_framework_ag_ui --cov-report=term-missing:skip-covered tests"
+test = "pytest --cov=agent_framework_ag_ui --cov-report=term-missing:skip-covered ag_ui_tests"
