--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -171,7 +171,7 @@ notice-rgx = "^# Copyright \\(c\\) Microsoft\\. All rights reserved\\."
 min-file-size = 1
 
 [tool.pytest.ini_options]
-testpaths = 'packages/**/tests'
+testpaths = ['packages/**/tests', 'packages/**/ag_ui_tests']
 norecursedirs = '**/lab/**'
 addopts = "-ra -q -r fEX"
 asyncio_mode = "auto"
@@ -261,7 +261,8 @@ pytest --import-mode=importlib
 --ignore-glob=packages/devui/**
 -rs
 -n logical --dist loadfile --dist worksteal
-packages/**/tests
+    packages/**/tests
+    packages/**/ag_ui_tests
 """
 
 [tool.poe.tasks.all-tests]
@@ -271,7 +272,8 @@ pytest --import-mode=importlib
 --ignore-glob=packages/devui/**
 -rs
 -n logical --dist loadfile --dist worksteal
-packages/**/tests
+    packages/**/tests
+    packages/**/ag_ui_tests
 """
 
 [tool.poe.tasks.venv]
