--- a/python/packages/azure-ai-search/pyproject.toml
+++ b/python/packages/azure-ai-search/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 ]
 dependencies = [
     "agent-framework-core>=1.0.0rc2",
-    "azure-search-documents>=11.7.0b2,<11.7.0b3",
+    "azure-search-documents>=11.0.0,<11.7.0b3",
 ]
 
 [tool.uv]
