--- a/python/packages/azure-ai/pyproject.toml
+++ b/python/packages/azure-ai/pyproject.toml
@@ -24,9 +24,9 @@ classifiers = [
 ]
 dependencies = [
     "agent-framework-core>=1.0.0rc2",
-    "azure-ai-agents>=1.2.0b5,<1.2.0b6",
+    "azure-ai-agents>=1.0.0,<1.2.0b6",
     "azure-ai-inference>=1.0.0b9,<1.0.0b10",
-    "aiohttp>=3.13.3,<4",
+    "aiohttp>=3.7.0,<4",
 ]
 
 [tool.uv]
